@@ -1,4 +1,3 @@
-import java.util.Collections;
 import java.util.HashMap;
 import java.util.Map;
 import java.util.Objects;
@@ -8,8 +7,11 @@ public class Library {
     String Name;
     private final Map<String, Book> Book_Inventory;
     private final Map<String, User> User_Catalog;
-    private final Map<String, String> BorrowedBooks;
+    private final Map<String, String> BorrowedBooks = new HashMap<>();
     private final Map<String, Book> BorrowedBookDetails;
+
+
+    //------------------------------------------------Library---------------------------------------------------------//
 
     public Library(String Name)
     {
@@ -17,20 +19,17 @@ public class Library {
         { throw new IllegalArgumentException("Library Name Should not be null"); }
 
         this.Name = Name;
-        this.Book_Inventory = new HashMap<String, Book>();
-        this.User_Catalog = new HashMap<String, User>();
-        this.BorrowedBooks = new HashMap<String, String>();
-        this.BorrowedBookDetails = new HashMap<String, Book>();
-    }
-
-    public void addBook(User user, Book book) throws Exception
-    {
-        if (book == null) { throw new IllegalArgumentException("Book Null"); }
-        if (user.isPermittedToAddBook()) { Book_Inventory.put(book.getIsbn(), book); }
-        else { throw new Exception("You are not authorized to add book"); }
+        this.Book_Inventory = new HashMap<>();
+        this.User_Catalog = new HashMap<>();
+        this.BorrowedBookDetails = new HashMap<>();
     }
 
     public Book get_Isbn_from_Library_Inventory(String Isbn) { return Book_Inventory.get(Isbn); }
+
+    //----------------------------------------------------------------------------------------------------------------//
+
+
+    //--------------------------------------------User_Management-----------------------------------------------------//
 
     public void addUser(User user)
     {
@@ -42,7 +41,26 @@ public class Library {
 
     public User getUserByName(String username) { return User_Catalog.get(username); }
 
-    public Map<String, Book> viewAvailableBooks() { return Collections.unmodifiableMap(new HashMap<>(Book_Inventory)); }
+    //----------------------------------------------------------------------------------------------------------------//
+
+
+    //--------------------------------------------Book_Management-----------------------------------------------------//
+
+    public void addBook(User user, Book book) throws Exception
+    {
+        if (book == null) { throw new IllegalArgumentException("Book Null"); }
+        if (user.isPermittedToAddBook()) { Book_Inventory.put(book.getIsbn(), book); }
+        else { throw new Exception("You are not authorized to add book"); }
+    }
+
+    public Map<String, Book> viewAvailableBooks() { return Map.copyOf(Book_Inventory); }
+
+    public Book getBookByISBN(String Isbn) { return Book_Inventory.get(Isbn); }
+
+    //----------------------------------------------------------------------------------------------------------------//
+
+
+    //--------------------------------------------Borrow_&_Return-----------------------------------------------------//
 
     public void borrowBook(User user, String Isbn)
     {
@@ -57,21 +75,43 @@ public class Library {
         else throw new IllegalArgumentException("Book not found");
     }
 
-    public Book getBookByISBN(String Isbn) { return Book_Inventory.get(Isbn); }
-
-    public String getBorrowerNameByISBN(String Isbn) { return BorrowedBooks.get(Isbn); }
-
     public void returnBook(User user, String Isbn)
     {
         Book book = BorrowedBookDetails.get(Isbn);
         if (!BorrowedBooks.containsKey(Isbn)) { throw  new IllegalArgumentException("Book was not borrowed by any user");}
 
         if (Objects.equals(user.getUserName(), BorrowedBooks.get(Isbn)))
-            {
-                Book_Inventory.put(Isbn, book);
-                BorrowedBooks.remove(Isbn);
-                BorrowedBookDetails.remove(Isbn);
-            }
+        {
+            Book_Inventory.put(Isbn, book);
+            BorrowedBooks.remove(Isbn);
+            BorrowedBookDetails.remove(Isbn);
+        }
         else throw new IllegalArgumentException("book was not borrowed by this user");
     }
+
+    public String getBorrowerNameByISBN(String Isbn) { return BorrowedBooks.get(Isbn); }
+
+    //----------------------------------------------------------------------------------------------------------------//
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 }
